# eeric-interpreter

./: Cargo.toml
.github/workflows/: rust.yml
src/: interpreter.rs  lib.rs  machine.rs  prelude.rs
src/interpreter/: decoder.rs
src/interpreter/decoder/: data.rs  operand.rs
src/interpreter/decoder/operand/: csr.rs  float.rs  integer.rs  vector.rs
src/machine/: decoder.rs
src/machine/decoder/: operand.rs
