[package]
name = "eeric-interpreter"
version = "0.1.0-rc.3"
edition = "2021"
description = "A front-end abstraction layer over eeric"
license = "MIT"
repository = "https://github.com/PawelPerek/eeric"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
eeric = "0.1.0-rc.5"